# PRoject-2-C

./: .gitignore  CMakeLists.txt  Cards.c  Cards.h  Cards.txt  FLinkedlists.c  FLinkedlists.h  Flinkedstacks.c  Flinkedstacks.h  IDK.c  Shuffle.c  Shuffle.h  ShuffledCards.txt  SplitLinked.c  SplitLinked.h  Terminal.c  Terminal.h  main.c  main.h  saveFile.txt
